# compliance-copilot

./: .gitignore  .gitlab-ci.yml  Makefile  README.md  pyproject.toml
.github/workflows/: python-ci.yml
docs/: architecture.md  interview-notes.md
docs/adr/: 0001-main-design-choice.md
src/: __init__.py  app.py  config.py  llm.py  safety.py  scoring.py
tests/: test_app.py  test_basic.py  test_llm.py  test_safety.py  test_scoring.py
